<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="li.nibble.android.codingtest.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/houses"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="li.nibble.android.codingtest.MainActivity"
        tools:showIn="@layout/characters_list" />

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/pb"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
</RelativeLayout>